Banner overlap and button link fixes

--- a/app/assets/stylesheets/layouts/header/_banner.scss
+++ b/app/assets/stylesheets/layouts/header/_banner.scss
@@ -93,6 +93,7 @@
 
         flex-wrap: wrap;
         flex:      0 1 auto;
+        pointer-events: none;
 
         &.center {
 
@@ -129,6 +130,7 @@
 
         a {
             text-decoration: underline;
+            pointer-events: auto;
         }
 
         .title {
